# practice

./: CMakeCache.txt  CMakeLists.txt  CheckPrime.hpp  CheckPrimeTests.cpp  addNum.cpp  addNumTest.cpp  main.cpp
API_cpp/: CMakeLists.txt  apiClass.cpp  apiClass.hpp  apiClassTests.cpp  main.cpp
CheckPrime/: CMakeCache.txt  CMakeLists.txt  CheckPrime  CheckPrime.cpp  CheckPrimeTests  CheckPrimeTests.cpp  Makefile  cmake_install.cmake  main.cpp
CreateReceiver/: CMakeCache.txt  CMakeLists.txt  CRTests_e  CreateReceiver.cpp  CreateReceiver.hpp  CreateReceiverTests.cpp  Makefile  cmake_install.cmake  main.cpp
CreateReceiver_repl/: CMakeLists.txt  CreateReceiver_repl.cpp  CreateReceiver_repl.hpp  CreateReceiver_repl_Tests.cpp  main.cpp
GetCapabilities_repl/: GetCapabilities_repl.cpp  GetCapabilities_repl.hpp  GetCapabilities_replTests.cpp  SoC.cpp  SoC.hpp  Standard.hpp  TunerPath.hpp
GetReceivers_repl/: Antenna.cpp  Antenna.hpp  GetReceiverReplAdapter.cpp  GetReceiverReplAdapter.hpp  GetReceiverReplProxy.cpp  GetReceiverReplProxy.hpp  GetReceivers_repl.cpp  GetReceivers_repl.hpp  GetReceivers_replTests.cpp  Mock_Tests.cpp  Receiver.cpp  Receiver.hpp
GetResourceUsage_repl/: CMakeLists.txt  DFE.cpp  DFE.hpp  GetResourceUsage_repl.cpp  GetResourceUsage_repl.hpp  GetResourceUsage_replTests.cpp  NBT.hpp  Receiver.hpp  SoC.cpp  SoC.hpp  TunerPath.cpp  TunerPath.hpp
findNumber/: CMakeLists.txt  findNumber.cpp  findNumber.hpp  findNumberTests.cpp  main.cpp  tests_bdd.cpp  tests_sections.cpp
